--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>React Todo List</title>
 </head>
+
 <body>
-  <h1>This is not a React app yet!</h1>
-  <div id="app"></div>
+  <div id="app">
+    <h1>This is not a React app yet!</h1></div>
   <script src="bundle.js"></script>
 </body>
+
 </html>
